# Vega-7

./: .gitignore  README.md  Vega 7 Beta.ipynb  Vega_7_ARWKV.ipynb  pyproject.toml
vega7/: __init__.py  __main__.py  model.py  training.py  utils.py
