[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vega7"
version = "0.1.0"
description = "Vega 7 model implementation"
readme = "README.md"
authors = [{name = "Tester"}]
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.0",
    "transformers>=4.0",
    "accelerate>=0.20",
]

[project.urls]
Homepage = "https://example.com"
